--- a/config.txt.EXAMPLE
+++ b/config.txt.EXAMPLE
@@ -3,3 +3,5 @@ channel = my_channel_name
 client_id = 1234clientid1234
 client_secret = 1234clientsecret1234
 auth_file = tokens.tmp
+[tts]
+reward_name = TTS Reward Name
